Add author image, fix bug jekyll

--- a/_config.yml
+++ b/_config.yml
@@ -4,13 +4,13 @@ description: > # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 permalink: ':title/'
-baseurl: "" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://huypva.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 site-twitter: #if your site has a twitter account, enter it here
 
 # Author Settings
 author: HuyPVA # add your name
-author-img: code.webp # add your photo
+author-img: author.webp # add your photo
 about-author: Try to keep learning new things. # add description
 social-twitter: # add your Twitter handle
 social-facebook: # add your Facebook handle
