--- a/_config.yml
+++ b/_config.yml
@@ -12,11 +12,11 @@ site-twitter: #if your site has a twitter account, enter it here
 author: HuyPVA # add your name
 author-img: author.webp # add your photo
 about-author: Try to keep learning new things. # add description
-social-twitter: # add your Twitter handle
-social-facebook: # add your Facebook handle
+#social-twitter: # add your Twitter handle
+#social-facebook: # add your Facebook handle
 social-github: huypva # add your Github handle
-social-linkedin: # add your Linkedin handle
-social-email: # add your Email address
+#social-linkedin: # add your Linkedin handle
+social-email: huypva@gmail.com # add your Email address
 
 # Disqus
 discus-identifier: mr-huy # add your discus identifier
