--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,52 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+# Compiled class file
+*.class
+
+# Log file
+*.log
+*.log.gz
+**/**.log
+**/**.log.gz
+
+# BlueJ files
+*.ctxt
+
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
+
+# Package Files #
+*.war
+*.ear
+*.zip
+*.tar.gz
+*.rar
+
+#idea
+*.iws
+*.iml
+*.ipr
+**/.idea/*
+**/target/*
+
+# eclipse project file
+.settings/
+.classpath
+.project
+
+# NetBeans specific
+nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+nbactions.xml
+nb-configuration.xml
+
+# OS
+.DS_Store
+
+#gradle
+.nb-gradle/
